--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simon</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 <body>
-    <button id="play">
-
-    </button>
-
+   <div class="row">
+    <div class="col">
+        <h1 class="text-center">
+            JS Simon
+        </h1>
+    </div>
+    <div class="row text-center">
+        <div class="col">
+            <button class="btn btn-success mt-5 ms-5" id="play">
+       
+            </button>
+        </div>
+    </div>
+   </div>
     <script src="./script.js"></script>
 </body>
 </html>
